--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "author": "Ruth Torres",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.17.1",
     "inquirer": "^7.3.3",
-    "mysql2": "^2.3.0"
+    "mysql2": "^2.3.3"
   }
 }
